service/ingress/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
#  namespace: nginx-ingress
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: httpd
