service/ingress/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
#  namespace: nginx-ingress
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: tomcat
